# dl-algo-playground

./: .gitignore  main.py  pyproject.toml
cifar10/: dataset.py
diffusion/: model.py  optim.py
scripts/: sample_diffusion.py  show_attn_map.py  train_diffusion.py  train_transformer.py
transformer/: model.py  optim.py
