[project]
name = "dl-algo-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "mypy>=1.19.1",
    "pyqt5>=5.15.11",
    "ruff>=0.15.0",
    "tqdm>=4.67.3",
    "types-tqdm>=4.67.3.20260205",
]

[tool.ruff]
line-length = 99
target-version = "py312"
exclude = [
    ".venv",
    ".ruff_cache",
    ".mypy_cache",
    ".vscode",
    "data",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "TCH",    # flake8-type-checking
]

[tool.ruff.lint.isort]
lines-after-imports = 2
force-single-line = true
force-sort-within-sections = true
order-by-type = false

[tool.mypy]
# Configure mypy's strict mode.
warn_unused_configs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
strict_equality = true
extra_checks = true
no_implicit_reexport = true
